--- a/css/index.css
+++ b/css/index.css
@@ -349,9 +349,17 @@ padding-top: 30px;
 #contentArea{
   padding-left: 30px ;
   padding-right: 30px;
-  width: 986px;
+  max-width: 1200px;
   margin: 48px auto;
+  display: flex;
 }
+.recom-carousel-1{min-width: 986px;}
+.recom-r{min-width:185px; margin-left: 12px;}
+.recom-r #dust{text-align: center;}
+.recom-r #dust > h1{font-size: var(--title--small--text-6xl--semibold);	font-weight: 600;}
+.recom-r .status-wrap{display: flex;}
+.recom-r #dustStatus{margin-top: 10px;}
+.recom-r #location{text-align: center; margin-bottom: 10px;}
 .carousel-title{text-align: center; display: flex; justify-content: space-between; margin-bottom: 10px;}
 .carousel-title > span{
   margin-top: 50px;
