--- a/css/index.css
+++ b/css/index.css
@@ -12,12 +12,13 @@ body{overflow-x: hidden;overflow-y: auto;}
 #header .header-top-menu .utility > li:hover > a{
   text-decoration: underline;
 }
-#header .logo > a {display: block; width: 272px;}
-
+#header .logo > a {display: block; width: 150px;}
+#header .logo > a > img{width: 100%; height: 100%;}
 /*header-middle-menu  */
 .header-middle-menu{max-width:1200px; margin: auto; display: flex; align-items: center; /*margin-top: 32px; justify-content: space-between;*/ height: 100px; position: relative;}
 .header-utility-box{position: relative;}
 
+.search-box{margin-left: 100px;}
 #searchInput{width:650px; height: 48px; ; border: 1px solid var(--Neutral-neutral-200); box-shadow: 0 0 4px #00000025; padding-left: 20px; border-radius: 24px; outline: none;}
 #searchInput.active{border-radius: 10px 10px 0px 0px;}
 .search-box-result{
